# mc857

./: CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: FindLAPACK.cmake
data/: royal1.ppm  royal2.ppm  tennis1.ppm  tennis2.ppm  tennis2_crop.ppm
demo/: Makefile  aula1  aula1.c  aula1_color  aula1_color.c  correlation.cpp  filteringImage  filteringImage.cpp  gifTest.cpp  h.txt  imageGranulometry.cpp  imageHistogram.cpp  imagePdf.cpp  input.pgm  objectSimilarity.cpp  objectSimilarity2.cpp  output.pgm  outputColor.ppm  outputGray.pgm  packingImages  packingImages.cpp  readDirectory.cpp  rwImage  rwImage.c  rwImage.cpp  visualizationAdjRelation.cpp
include/: FL.h  adjacencyRelation.h  bagOfVisualWords.h  common.h  featureVector.h  file.h  filtering.h  gif.h  histogram.h  image.h  imageReader.h  kernel.h  morphology.h
kernel/libFL/: Makefile
kernel/libFL/cmake/: FindCBLAS.cmake
kernel/libFL/data/: car1.ppm  car2.ppm  lenaColor.ppm  squares.ppm  tennis1_crop.ppm
kernel/libFL/demo/: Makefile  correlation.cpp  imageCorrelation.cpp  imageHistogram.cpp  imageMorphology  imageMorphology.cpp  imagePdf.cpp  objectSimilarity.cpp  objectSimilarity2.cpp  rwImage.cpp  teste.pgm
kernel/libFL/include/: FL.h  adjacencyRelation.h  common.h  filtering.h  histogram.h  image.h  kernel.h  morphology.h
kernel/libFL/src/: adjacencyRelation.cpp  common.cpp  filtering.cpp  histogram.cpp  image.cpp  kernel.cpp  morphology.cpp
pythonUtils/: h.txt  histDepencies.sh  plotHist.py  plotVec.py
src/: adjacencyRelation.cpp  bagOfVisualWords.cpp  common.cpp  featureVector.cpp  file.cpp  filtering.cpp  gif.cpp  histogram.cpp  image.c  image.cpp  imageReader.cpp  kernel.cpp  morphology.cpp
